--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,6 @@ edition = "2018"
 name = "bowot"
 version = "1.0.0"
 
-[features]
-default = ["reqwest/default-tls"]
-vendored-openssl = ["openssl/vendored"]
-
 [dependencies]
 chrono = "0.4.15"
 comfy-table = "1.1.1"
@@ -17,7 +13,6 @@ futures = "0.3.5"
 humantime = "2.0.1"
 loc = "0.5.0"
 num-format = "0.4.0"
-openssl = { version = "*", optional = true }
 qrcode = "0.12.0"
 rand = { version = "0.7.3", features = ["getrandom", "std"] }
 regex = "1.3.9"
@@ -46,7 +41,7 @@ features = [
 	"model",
 	"standard_framework",
 	"utils",
-	"native_tls_backend",
+	"rustls_backend",
 	"absolute_ratelimits",
 	"collector",
 	"voice",
