--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ qrcode = "0.12.0"
 rand = { version = "0.7.3", features = ["getrandom", "std"] }
 regex = "1.3.9"
 reqwest = { version = "0.10.8", features = ["json"] }
-serde = { version = "1.0.115", features = ["derive"] }
+serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
 tokio = { version = "0.2.22", features = ["full"] }
 toml = "0.5.6"
@@ -25,7 +25,7 @@ tracing-log = "0.1.1"
 tracing-subscriber = "0.2.11"
 walkdir = "2.3.1"
 wither = { version = "0.9.0-alpha.1", default-features = false, features = ["tokio-runtime"] }
-youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "search" }
+youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
 itconfig = "1.0"
 
 [dependencies.serenity]
