--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ walkdir = "2.3.1"
 wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
 youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
 itconfig = "1.0"
+lazy_static = "1.4"
 
 [dependencies.serenity]
 version = "0.9.0-rc.2"
