--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tok
 youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
 itconfig = "1.0"
 lazy_static = "1.4"
+serenity_utils = "0.5.0"
 
 [dependencies.serenity]
 version = "0.9.0-rc.2"
