--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = 
 itconfig = "1.0"
 lazy_static = "1.4"
 serenity_utils = "0.5.0"
+strsim = "0.10.0"
+html-escape = "0.2.6"
 
 [dependencies.serenity]
 version = "0.9.0-rc.2"
