--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ version = "1.0.0"
 
 [dependencies]
 chrono = "0.4.19"
-comfy-table = "1.1.1"
+comfy-table = "1.2.0"
 failure = "0.1.8"
 fasteval = "0.2.4"
-futures = "0.3.6"
+futures = "0.3.7"
 humantime = "2.0.1"
 loc = "0.5.0"
 num-format = "0.4.0"
@@ -16,13 +16,13 @@ qrcode = "0.12.0"
 rand = { version = "0.7.3", features = ["getrandom", "std"] }
 regex = "1.4.0"
 reqwest = { version = "0.10.8", features = ["json"] }
-serde = { version = "1.0.116", features = ["derive"] }
+serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 tokio = { version = "0.2.22", features = ["full"] }
 toml = "0.5.7"
 tracing = "0.1.21"
 tracing-log = "0.1.1"
-tracing-subscriber = "0.2.13"
+tracing-subscriber = "0.2.15"
 walkdir = "2.3.1"
 wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
 youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
@@ -33,7 +33,7 @@ strsim = "0.10.0"
 html-escape = "0.2.6"
 
 [dependencies.serenity]
-version = "0.9.0-rc.2"
+version = "0.9.0"
 default-features = false
 features = [
 	"builder",
