--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ toml = "0.5.7"
 tracing = "0.1.22"
 tracing-log = "0.1.1"
 tracing-subscriber = "0.2.15"
+tracing-futures = "0.2.4"
 walkdir = "2.3.1"
 wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
 youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
@@ -33,7 +34,10 @@ strsim = "0.10.0"
 html-escape = "0.2.6"
 
 [dependencies.serenity]
-version = "0.9.2"
+git = "https://github.com/serenity-rs/serenity"
+branch = "current"
+# rev = "b98424d382f54318b4999ccab4d59acb34449df8"
+# version = "0.9.2"
 default-features = false
 features = [
 	"builder",
@@ -50,3 +54,9 @@ features = [
 	"collector",
 	"voice",
 ]
+
+[dependencies.songbird]
+features = ["builtin-queue"]
+git = "https://github.com/serenity-rs/songbird"
+branch = "current"
+# rev = "f222ce99696ab0dfa396bd6448bb4340b791625b"
