--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,8 @@ version = "1.0.0"
 [dependencies]
 chrono = "0.4.19"
 comfy-table = "1.4.2"
-failure = "0.1.8"
 fasteval = "0.2.4"
 futures = "0.3.8"
-humantime = "2.0.1"
-loc = "0.5.0"
-num-format = "0.4.0"
 qrcode = "0.12.0"
 rand = { version = "0.7.3", features = ["getrandom", "std"] }
 regex = "1.4.2"
@@ -19,19 +15,19 @@ reqwest = { version = "0.10.9", default-features = false, features = ["json", "r
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0.60"
 tokio = { version = "0.2.22", features = ["full"] }
-toml = "0.5.7"
 tracing = "0.1.22"
 tracing-log = "0.1.1"
 tracing-subscriber = "0.2.15"
 tracing-futures = "0.2.4"
-walkdir = "2.3.1"
 wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
 youtube_dl = { git = "https://github.com/saanuregh/youtube-dl-rs.git", branch = "async" }
 itconfig = "1.0"
 lazy_static = "1.4"
-serenity_utils = "0.5.1"
 strsim = "0.10.0"
 html-escape = "0.2.6"
+warp = "0.2.5"
+handlebars = "3.5.1"
+sysinfo = "0.15.3"
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity"
