--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ futures = "0.3.8"
 qrcode = "0.12.0"
 rand = { version = "0.7.3", features = ["getrandom", "std"] }
 regex = "1.4.2"
-reqwest = { version = "0.10.9", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.10.10", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0.60"
 tokio = { version = "0.2.22", features = ["full"] }
