--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,35 +4,35 @@ name = "bowot"
 version = "1.0.0"
 
 [dependencies]
-chrono = "0.4.19"
-comfy-table = "1.4.2"
-fasteval = "0.2.4"
-futures = "0.3.8"
-qrcode = "0.12.0"
-rand = { version = "0.7.3", features = ["getrandom", "std"] }
-regex = "1.4.2"
-reqwest = { version = "0.10.10", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
-serde = { version = "1.0.118", features = ["derive"] }
-serde_json = "1.0.60"
-tokio = { version = "0.2.22", features = ["full"] }
-tracing = "0.1.22"
-tracing-log = "0.1.1"
-tracing-subscriber = "0.2.15"
-tracing-futures = "0.2.4"
-wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
+chrono = "0.4"
+comfy-table = "2.1"
+fasteval = "0.2"
+futures = "0.3"
+qrcode = { version = "0.12", default-features = false }
+rand = { version = "0.8", features = ["getrandom"] }
+regex = "1.4"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "io-std", "process", "signal", "time" ] }
+tracing = "0.1"
+tracing-log = { version = "0.1", features = ["env_logger"] }
+tracing-subscriber = "0.2"
 itconfig = "1.0"
 lazy_static = "1.4"
-strsim = "0.10.0"
-html-escape = "0.2.6"
-warp = "0.2.5"
-handlebars = "3.5.1"
-sysinfo = "0.15.3"
-audiopus_sys = { version = "0.1.8", features = ["static"] }
+strsim = "0.10"
+html-escape = "0.2"
+sysinfo = "0.16"
+audiopus_sys = { version = "0.1", features = ["static"] }
+sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
+anyhow = "1.0"
+strum = "0.20"
+strum_macros = "0.20"
 
 [dependencies.serenity]
-git = "https://github.com/serenity-rs/serenity"
-branch = "current"
-# version = "0.9.2"
+# git = "https://github.com/serenity-rs/serenity"
+# branch = "current"
+version = "0.10"
 default-features = false
 features = [
 	"builder",
@@ -52,5 +52,6 @@ features = [
 
 [dependencies.songbird]
 features = ["builtin-queue"]
-git = "https://github.com/serenity-rs/songbird"
-branch = "current"
+# git = "https://github.com/serenity-rs/songbird"
+# branch = "current"
+version = "0.1"
