--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,14 @@ regex = "1.4"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "io-std", "process", "signal", "time" ] }
+tokio = { version = "1.2", features = [
+	"macros",
+	"rt-multi-thread",
+	"io-std",
+	"process",
+	"signal",
+	"time",
+] }
 tracing = "0.1"
 tracing-log = { version = "0.1", features = ["env_logger"] }
 tracing-subscriber = "0.2"
@@ -24,7 +31,7 @@ strsim = "0.10"
 html-escape = "0.2"
 sysinfo = "0.16"
 audiopus_sys = { version = "0.1", features = ["static"] }
-sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
+sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
 anyhow = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
