--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chron
 anyhow = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
+warp =  { version = "0.3.0", default-features = false, features = [] }
 
 [dependencies.serenity]
 # git = "https://github.com/serenity-rs/serenity"
