--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ html-escape = "0.2"
 sysinfo = "0.16"
 audiopus_sys = { version="0.1", features=["static"] }
 sqlx = { version="0.5", features=["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
+bb8-redis = "0.9"
 anyhow = "1.0"
 strum = "0.20"
 strum_macros = "0.20"
