--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,21 @@ version = "1.0.0"
 
 [dependencies]
 chrono = "0.4"
-comfy-table = "3.0"
+comfy-table = "4.0.1"
 fasteval = "0.2"
 futures = "0.3"
-qrcode = { version="0.12", default-features=false }
-rand = { version="0.8", features=["getrandom"] }
+qrcode = { version = "0.12", default-features = false }
+rand = { version = "0.8", features = ["getrandom"] }
 regex = "1.5"
-reqwest = { version="0.11", default-features=false, features=["json", "rustls-tls", "gzip", "brotli"] }
-serde = { version="1.0", features=["derive"] }
+reqwest = { version = "0.11", default-features = false, features = [
+	"json",
+	"rustls-tls",
+	"gzip",
+	"brotli",
+] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version="1.8", features=[
+tokio = { version = "1.8", features = [
 	"macros",
 	"rt-multi-thread",
 	"io-std",
@@ -23,21 +28,25 @@ tokio = { version="1.8", features=[
 	"time",
 ] }
 tracing = "0.1"
-tracing-log = { version="0.1", features=["env_logger"] }
+tracing-log = { version = "0.1", features = ["env_logger"] }
 tracing-subscriber = "0.2"
 itconfig = "1.1"
 lazy_static = "1.4"
 strsim = "0.10"
 html-escape = "0.2"
-sysinfo = "0.19"
-audiopus_sys = { version="0.1", features=["static"] }
-sqlx = { version="0.5", features=["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
-bb8-redis = "0.9"
+sysinfo = "0.20"
+audiopus_sys = { version = "0.1", features = ["static"] }
+sqlx = { version = "0.5", features = [
+	"runtime-tokio-rustls",
+	"postgres",
+	"chrono",
+] }
+bb8-redis = "0.10"
 anyhow = "1.0"
 strum = "0.21"
 strum_macros = "0.21"
-warp = { version="0.3", default-features=false, features=[] }
-dashmap = { version="4.0", features=["serde"] }
+warp = { version = "0.3", default-features = false, features = [] }
+dashmap = { version = "4.0", features = ["serde"] }
 mimalloc = "0.1"
 
 [dependencies.serenity]
