rewrote with poise and uses lavalink

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-DATABASE_URL="mongo uri"
-ENABLE_SERVICES=false
-PREFIX=!
+LAVALINK_HOST="lavalink host"
+LAVALINK_PASSWORD="youshallnotpass"
+DATABASE_URL="postgressuri"
+ENABLE_SERVICES=true
+PREFIX=.
 TOKEN="bot token"
+RUST_LOG=info
