--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,77 +1,51 @@
 [package]
-edition = "2018"
 name = "bowot"
-version = "1.0.0"
+version = "2.0.0"
+edition = "2018"
 
 [dependencies]
 chrono = "0.4"
-comfy-table = "4.0.1"
-fasteval = "0.2"
-futures = "0.3"
-qrcode = { version = "0.12", default-features = false }
-rand = { version = "0.8", features = ["getrandom"] }
+anyhow = "1.0"
+dotenv = "0.15"
+lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs", features = [
+	"rustls",
+] }
+lazy_static = "1.4"
+parse_duration = "2.1"
+poise = { git = "https://github.com/kangalioo/poise", features = ["collector"] }
+rand = { version = "0.8" }
 regex = "1.5"
+songbird = { version = "0.2", default-features = false, features = [
+	"serenity-rustls",
+	"gateway",
+] }
+tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
+url = "2.2"
+tracing = "0.1"
+tracing-log = { version = "0.1", features = ["env_logger"] }
+tracing-subscriber = "0.2"
+itconfig = "1.1"
+strsim = "0.10"
+html-escape = "0.2"
+sysinfo = "0.20"
+sqlx = { version = "0.5", features = [
+	"runtime-tokio-rustls",
+	"postgres",
+	"chrono",
+	"offline",
+] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+comfy-table = "4.0.1"
 reqwest = { version = "0.11", default-features = false, features = [
 	"json",
 	"rustls-tls",
 	"gzip",
 	"brotli",
 ] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1.8", features = [
-	"macros",
-	"rt-multi-thread",
-	"io-std",
-	"process",
-	"signal",
-	"time",
-] }
-tracing = "0.1"
-tracing-log = { version = "0.1", features = ["env_logger"] }
-tracing-subscriber = "0.2"
-itconfig = "1.1"
-lazy_static = "1.4"
-strsim = "0.10"
-html-escape = "0.2"
-sysinfo = "0.20"
-audiopus_sys = { version = "0.1", features = ["static"] }
-sqlx = { version = "0.5", features = [
-	"runtime-tokio-rustls",
-	"postgres",
-	"chrono",
-] }
-bb8-redis = "0.10"
-anyhow = "1.0"
 strum = "0.21"
 strum_macros = "0.21"
-warp = { version = "0.3", default-features = false, features = [] }
-dashmap = { version = "4.0", features = ["serde"] }
-mimalloc = "0.1"
+indexmap = "~1.6.2"
 
-[dependencies.serenity]
-# git = "https://github.com/serenity-rs/serenity"
-# branch = "current"
-version = "0.10"
-default-features = false
-features = [
-	"builder",
-	"cache",
-	"client",
-	"framework",
-	"gateway",
-	"http",
-	"model",
-	"standard_framework",
-	"utils",
-	"rustls_backend",
-	"absolute_ratelimits",
-	"collector",
-	"voice",
-]
-
-[dependencies.songbird]
-features = ["builtin-queue"]
-# git = "https://github.com/serenity-rs/songbird"
-# branch = "current"
-version = "0.1"
+[patch.crates-io]
+serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
